# dissertation

./: .gitignore  Untitled-1.py  dw.ipynb  inspect.ipynb  main.py  pyproject.toml  test.ipynb  test.py  train.py  train.sh  train_gmm.sh
cmcd/: anneal.py  buffer.py  densities.py  initial_dist.py  loss_fn.py  numericals.py  replay_buffer.py  sampler.py  samples.py  score.py
mcmd/: anneal.py  densities.py  sampler.py  score.py
